IJ-57 Fixed table elements so that on smaller screens if they overflow their parent container they can be scrolled rather than going off screen.

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -15,11 +15,11 @@ $margins: 1rem;
 
   section {
     border-radius: 0.6rem;
-    background-color: $grey;
     text-align: center;
-    margin: 1rem;
+    margin: 1rem 0;
 
-    @media screen and (min-width: $screen-md){
+    @media screen and (min-width: $screen-md) {
+      background-color: $grey;
       margin: 1rem;
       padding: 1rem;
     }
@@ -62,21 +62,9 @@ $margins: 1rem;
       }
     }
 
-    table {
-      td {
-        height: 50px;
-        line-height: 50px;
-        padding: 0;
-
-        a {
-          display: block;
-          width: 100%;
-          height: 100%;
-          text-decoration: none;
-          color: $white;
-          cursor: pointer;
-        }
-      }
+    .table-container {
+      overflow-x: auto;
+      margin-bottom: 0.5rem;
     }
   }
 }
