--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -30,7 +30,29 @@ body#overboot {
   }
 
   table {
-    border-radius: 0.6rem;
+    white-space: nowrap;
+
+    &.link-table {
+      td {
+        padding: 0 !important;
+      }
+    }
+
+    td {
+      height: 50px;
+      line-height: 50px;
+      padding: 0 1rem;
+
+      a {
+        display: block;
+        width: 100%;
+        height: 100%;
+        text-decoration: none;
+        color: $white;
+        cursor: pointer;
+        padding: 0 1rem;
+      }
+    }
 
     .fa-check-circle {
       color: $success;
